--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
+<head th:fragment="head">
     <meta charset="UTF-8"/>
     <title></title>
+    <!--
+    <script th:src=""@{/script.js}></script>
+    <link th:href="@{/styles.css}" rel="stylesheet">
+    -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
 </head>
 <body>
 
 <nav th:fragment="navigation">
-    <ul>
-        <li><a href="/">Home</a> </li>
-        <li><a href="/kids">All Kids</a> </li>
-        <li><a href="/kids/create">Add Kid</a> </li>
+    <ul class="nav">
+        <li class="nav-item"><a href="/" class="nav-link">Home</a> </li>
+        <li class="nav-item"><a href="/kids" class="nav-link">All Kids</a> </li>
+        <li class="nav-item"><a href="/kids/create" class="nav-link">Add Kid</a> </li>
     </ul>
 </nav>
 
