--- a/src/main/resources/templates/kids/create.html
+++ b/src/main/resources/templates/kids/create.html
@@ -1,10 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org/">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Create Kid</title>
-</head>
-<body>
+<head th:replace="fragments :: head"></head>
+
+<body class="container">
 
 <h1>Create Kid</h1>
 
@@ -12,8 +10,17 @@
 
 
 <form method="post" action="/kids/create">
-    <input type="text" name="kidName">
-    <input type="submit" name="Add Kid">
+    <div class="form-group">
+        <label>Kid name:
+            <input type="text" name="kidName" class="form-control">
+
+        </label>
+    </div>
+
+    <div class="form-group">
+        <input type="submit" name="Add Kid" class="btn btn-success">
+    </div>
+
 
 </form>
 </body>
